# openiclib

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  examples.md  index.html  index.md  library.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  stats.md  technologies.md
.github/workflows/: ci.yml  classify.yml  deploy.yml
assets/: catalog.css  catalog.js  designs.json
data/: designs.json  designs.proto  known_repos.txt
docs/: index.md  submitting.md
examples/: index.html
hooks/: catalog_hook.py
pdks/ihp/: 160GHz_LNA  40_GHZ_LOW_NOISE_TIA  TO_Apr2025.sparse-checkout
search/: search_index.json
src/openiclib/: __init__.py  cli.py  db.py  designs_pb2.py  designs_pb2.pyi  discover.py  discover_gitlab.py  keyword_classifier.py  models.py  stats.py  types.py
stats/: index.html
submitting/: index.html
technologies/: index.html
tests/: test_catalog_hook.py  test_db.py  test_discover.py  test_keyword_classifier.py  test_models.py  test_stats.py
