[project]
name = "openiclib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "das-dias", email = "das.dias6@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.10.6",
    "mkdocstrings[python]>=0.29.1",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
