[project]
name = "openiclib"
version = "0.1.0"
description = "Open Integrated Circuit Library — aggregating silicon-proven open PDK designs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "das-dias", email = "das.dias6@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "ic-design",
    "open-pdk",
    "silicon-proven",
    "tapeout",
    "analog",
    "mixed-signal",
    "skywater130",
    "ihp-sg13g2",
    "gf180mcu",
    "gdsfactory",
    "asic",
    "vlsi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://openiclib.github.io"
Repository = "https://github.com/gdsfactory/openiclib"
Documentation = "https://openiclib.github.io"
Issues = "https://github.com/gdsfactory/openiclib/issues"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.10.6",
    "mkdocstrings[python]>=0.29.1",
    "protobuf>=5.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
]

[project.scripts]
openiclib = "openiclib.cli:main"

[dependency-groups]
dev = [
    "grpcio-tools>=1.70",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "hooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
